# mypy-strict-kwargs

./: .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  example.py  pyproject.toml  spelling_private_dict.txt
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: Makefile
docs/source/: __init__.py  conf.py
newsfragments/: 549.change  550.change  551.change  552.change  553.change  554.change  555.change  556.change  567.change  568.change
src/mypy_strict_kwargs/: __init__.py  plugin.py
tests/: __init__.py  mypy.ini  test_call_expr_collection.py  test_incremental_cache.py  test_no_config_file.py  test_plugin.yaml  test_plugin_ini.yaml
